# starlink-exporter

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/workflows/: ci.yml
dashboard/: starlink.json
src/: error.rs  main.rs  metrics.rs
